--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="main_background">#EBE6E6</color>
+    <color name="background_text">#1B1B1B</color>
+    <color name="background_recycler">#A08989</color>
+    <color name="main_text">#F2EEEE</color>
 </resources>
